--- a/pages/about.html
+++ b/pages/about.html
@@ -16,11 +16,28 @@
 </head>
 <body>
     <!-- Nav Section  -->
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Restaurant Website</title>
+    <link rel="stylesheet" href="/webcuoiki/styles/reset.css">
+    <link rel="stylesheet" href="/webcuoiki/styles/globalStyles.css">
+    <link rel="stylesheet" href="/webcuoiki/styles/components.css">
+    <link rel="stylesheet" href="/webcuoiki/styles/home.css">
+    
+    <!-- aos -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
+<body>
+    <!-- Nav Section  -->
     <div class="nav">
         <div class="container">
             <div class="nav__wrapper">
-                <a href="./index.html" class="logo">
-                    <img src="./images/logo.svg" alt="#">
+                <a href="/webcuoiki/pages/index.html" class="logo">
+                    <img src="/webcuoiki/img/logo.svg" alt="#">
                 </a>
                 <nav>
                     <div class="nav__icon">
@@ -59,27 +76,27 @@
                         </div>
                         <div class="nav__list__wrapper">
                             <li>
-                                <a href="./index.html" class="nav__link">
+                                <a href="/webcuoiki/pages/index.html" class="nav__link">
                                     Home
                                 </a>
                             </li>
                             <li>
-                                <a href="./menu.html" class="nav__link">
+                                <a href="/webcuoiki/pages/menu.html" class="nav__link">
                                     Menu
                                 </a>
                             </li>
                             <li>
-                                <a href="./about.html" class="nav__link">
+                                <a href="/webcuoiki/pages/about.html" class="nav__link">
                                     About
                                 </a>
                             </li>
                             <li>
-                                <a href="./contact.html" class="nav__link">
+                                <a href="/webcuoiki/pages/contact.html" class="nav__link">
                                     Contact
                                 </a>
                             </li>
                             <li>
-                                <a href="./booking.html" class="btn primary-btn">
+                                <a href="/webcuoiki/pages/booking.html" class="btn primary-btn">
                                     Book Table
                                 </a>
                             </li>
@@ -90,13 +107,14 @@
         </div>
     </div>
 
+
     <!-- End Nav Section -->
     <!-- Our Story -->
     <section id="ourStory" data-aos="fade-up"> 
         <div class="container">
             <div class="ourStory__wrapper">
                 <div class="ourStory__img">
-                    <img src="./images/ourStoryImg.png" alt="#">
+                    <img src="/webcuoiki/img/ourStoryImg.png" alt="#">
                 </div>
                 <div class="ourStory__info">
                     <h3 class="ourStory__title">
@@ -128,13 +146,13 @@
             </div>
             <div class="ourGoals__imgs__wrapper">
                 <div class="ourGoals__img1">
-                    <img src="./images/ourGoals_img1.png" alt="">
+                    <img src="/webcuoiki/img/ourGoals_img1.png" alt="">
                 </div>
                 <div class="ourGoals__img2">
-                    <img src="./images/ourGoals_img2.png" alt="">
+                    <img src="/webcuoiki/img/ourGoals_img2.png" alt="">
                 </div>
                 <div class="ourGoals__img3">
-                    <img src="./images/ourGoals_img3.png" alt="">
+                    <img src="/webcuoiki/img/ourGoals_img3.png" alt="">
                 </div>
             </div>
         </div>
@@ -147,7 +165,7 @@
             <div class="footer__wrapper">
                 <div class="footer__col1">
                     <div class="footer__logo">
-                        <img src="./images/logo.svg" alt="#">
+                        <img src="/webcuoiki/img/logo.svg" alt="#">
                     </div>
                     <p class="footer__desc">
                         Fresh and delicious traditional Bangladeshi food to delight the whole family.
@@ -218,19 +236,19 @@
                     </h3>
                     <ol class="footer__text">
                         <li>
-                            <a href="./index.html">Home</a>
+                            <a href="/webcuoiki/pages/index.html">Home</a>
                         </li>
                         <li>
-                            <a href="./menu.html">Menu</a>
+                            <a href="/webcuoiki/pages/menu.html">Menu</a>
                         </li>
                         <li>
-                            <a href="./booking.html">Book Table</a>
+                            <a href="/webcuoiki/pages/booking.html">Book Table</a>
                         </li>
                         <li>
-                            <a href="./about.html">About Us</a>
+                            <a href="/webcuoiki/pages/about.html">About Us</a>
                         </li>
                         <li>
-                            <a href="./contact.html">Contact</a>
+                            <a href="/webcuoiki/pages/contact.html">Contact</a>
                         </li>
                         <li>
                             <a href="#">Privacy Policy</a>
@@ -243,7 +261,7 @@
                     </h3>
                     <ol class="footer__text">
                         <li>
-                            <a href="./contact.html">Home</a>
+                            <a href="/webcuoiki/pages/contact.html">Home</a>
                         </li>
                         <li>
                             <a href="#">Support Center</a>
@@ -288,7 +306,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <!-- custom script -->
-    <script src="./main.js"></script>
+    <script src="/webcuoiki/scripts/main.js"></script>
 </body>
 
 
