--- a/pages/index.html
+++ b/pages/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Website</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="globalStyles.css">
-    <link rel="stylesheet" href="components.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/webcuoiki/styles/reset.css">
+    <link rel="stylesheet" href="/webcuoiki/styles/globalStyles.css">
+    <link rel="stylesheet" href="/webcuoiki/styles/components.css">
+    <link rel="stylesheet" href="/webcuoiki/styles/home.css">
     
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -18,8 +18,8 @@
     <div class="nav">
         <div class="container">
             <div class="nav__wrapper">
-                <a href="./index.html" class="logo">
-                    <img src="./images/logo.svg" alt="#">
+                <a href="/webcuoiki/pages/index.html" class="logo">
+                    <img src="/webcuoiki/img/logo.svg" alt="#">
                 </a>
                 <nav>
                     <div class="nav__icon">
@@ -58,27 +58,27 @@
                         </div>
                         <div class="nav__list__wrapper">
                             <li>
-                                <a href="./index.html" class="nav__link">
+                                <a href="/webcuoiki/pages/index.html" class="nav__link">
                                     Home
                                 </a>
                             </li>
                             <li>
-                                <a href="./menu.html" class="nav__link">
+                                <a href="/webcuoiki/pages/menu.html" class="nav__link">
                                     Menu
                                 </a>
                             </li>
                             <li>
-                                <a href="./about.html" class="nav__link">
+                                <a href="/webcuoiki/pages/about.html" class="nav__link">
                                     About
                                 </a>
                             </li>
                             <li>
-                                <a href="./contact.html" class="nav__link">
+                                <a href="/webcuoiki/pages/contact.html" class="nav__link">
                                     Contact
                                 </a>
                             </li>
                             <li>
-                                <a href="./booking.html" class="btn primary-btn">
+                                <a href="/webcuoiki/pages/booking.html" class="btn primary-btn">
                                     Book Table
                                 </a>
                             </li>
@@ -92,26 +92,26 @@
     <!-- End Nav Section -->
    <!-- Hero Section -->
    <section id="hero">
-        <div class="container">
-            <div class="hero__wrapper">
-                <div class="hero__left" data-aos="fade-left">
-                    <div class="hero__left__wrapper">
-                        <h1 class="hero__heading">The flavor of tradition</h1>
-                        <p class="hero__info">We are a multi-cuisine restaurant offering a wide variety of food experience in both casual and fine dining environment.</p>
-                        <div class="button__wrapper">
-                            <a href="#" class="btn primary-btn">Explore Menu</a>
-                            <a href="#" class="btn">Book Table</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="hero__right" data-aos="fade-right">
-                    <div class="hero__imgWrapper">
-                        <img src="./images/heroImg.png" alt="food img">
+    <div class="container">
+        <div class="hero__wrapper">
+            <div class="hero__left" data-aos="fade-left">
+                <div class="hero__left__wrapper">
+                    <h1 class="hero__heading">The flavor of tradition</h1>
+                    <p class="hero__info">We are a multi-cuisine restaurant offering a wide variety of food experience in both casual and fine dining environment.</p>
+                    <div class="button__wrapper">
+                        <a href="#" class="btn primary-btn">Explore Menu</a>
+                        <a href="#" class="btn">Book Table</a>
                     </div>
                 </div>
             </div>
+            <div class="hero__right" data-aos="fade-right">
+                <div class="hero__imgWrapper">
+                    <img src="/webcuoiki/img/heroImg.png" alt="food img">
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
 <!-- EndHeroSection -->
 
     <!-- Footer -->
@@ -121,7 +121,7 @@
             <div class="footer__wrapper">
                 <div class="footer__col1">
                     <div class="footer__logo">
-                        <img src="./images/logo.svg" alt="#">
+                        <img src="/webcuoiki/img/logo.svg" alt="#">
                     </div>
                     <p class="footer__desc">
                         Fresh and delicious traditional Bangladeshi food to delight the whole family.
@@ -192,19 +192,19 @@
                     </h3>
                     <ol class="footer__text">
                         <li>
-                            <a href="./index.html">Home</a>
+                            <a href="/webcuoiki/pages/index.html">Home</a>
                         </li>
                         <li>
-                            <a href="./menu.html">Menu</a>
+                            <a href="/webcuoiki/pages/menu.html">Menu</a>
                         </li>
                         <li>
-                            <a href="./booking.html">Book Table</a>
+                            <a href="/webcuoiki/pages/booking.html">Book Table</a>
                         </li>
                         <li>
-                            <a href="./about.html">About Us</a>
+                            <a href="/webcuoiki/pages/about.html">About Us</a>
                         </li>
                         <li>
-                            <a href="./contact.html">Contact</a>
+                            <a href="/webcuoiki/pages/contact.html">Contact</a>
                         </li>
                         <li>
                             <a href="#">Privacy Policy</a>
@@ -217,7 +217,7 @@
                     </h3>
                     <ol class="footer__text">
                         <li>
-                            <a href="./contact.html">Home</a>
+                            <a href="/webcuoiki/pages/contact.html">Home</a>
                         </li>
                         <li>
                             <a href="#">Support Center</a>
@@ -262,9 +262,10 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <!-- custom script -->
-    <script src="./main.js"></script>
+    <script src="/webcuoiki/scripts/main.js"></script>
 </body>
 
 
 
 </html>
+
