--- a/pages/index.html
+++ b/pages/index.html
@@ -263,9 +263,55 @@
 
     <!-- custom script -->
     <script src="/webcuoiki/scripts/main.js"></script>
+    
+    <!-- Why us section-->
+    <section id="whyUS">
+        <div class="container">
+            <div class="whyUs__wrapper">
+                <div class="whyUs__left" data-aos="fade-right">
+                    <h2 class="whyUs__title">Why Choose Our Food</h2>
+                    <p class="whyUs__text">
+                        Quality of Service, Food, Ambiance, and Value of Money
+                        are the primary elements for choosing a restaurant.
+                        Shaif's Cuisine is one of the most exquiste
+                        fine-dinning restaurant in Chittagong cities with a
+                        captivating
+                        view of GEC Hills, perfect ambiance, and scrumptious 
+                        food.
+                    </p>
+                </div>
+                <div class="whyUs__right" data-aos="fade-left">
+                    <div class="whyUs__items__wrapper">
+                        <div class="whyUs__item">
+                            <div class="whyUs__item__icon">
+                                <img src="./images/whyUs-icon1.svg" alt="quality food">
+                            </div>
+                            <p class="whyUs__item__text">Quality Food</p>
+                        </div>
+                        <div class="whyUs__item">
+                            <div class="whyUs__item__icon">
+                                <img src="./images/whyUs-icon2.svg" alt="Classical taste">
+                            </div>
+                            <p class="whyUs__item__text">Classical taste</p>
+                        </div>
+                        <div class="whyUs__item">
+                            <div class="whyUs__item__icon">
+                                <img src="./images/whyUs-icon3.svg" alt="Skilled chef">
+                            </div>
+                            <p class="whyUs__item__text">Skilled chef</p>
+                        </div>
+                        <div class="whyUs__item">
+                            <div class="whyUs__item__icon">
+                                <img src="./images/whyUs-icon4.svg" alt="Best service">
+                            </div>
+                            <p class="whyUs__item__text">Best service</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End why us section-->
 </body>
-
-
-
 </html>
 
