--- a/pages/index.html
+++ b/pages/index.html
@@ -312,6 +312,82 @@
         </div>
     </section>
     <!-- End why us section-->
+    <!-- Testimonial section-->
+    <section id="testimonial" data-aos="fade-up">
+        <div class="contaier">
+            <div class="testimonial__wrapper">
+                <h2 class="testimonial__title">
+                    <div class="testimonial__items__wrapper">
+                        <div class="testimonial__item">
+                            <div class="testimonial__item__image">
+                                <img src="./images/testimonial_img1.png" alt="sayed ahmed">
+                            </div>
+                            <div class="testimonial__item__info">
+                                <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                                <div class="testimonial__item__stars">
+                                    <img src="./images/3star.png" alt="stars">
+                                </div>
+                                <p class="testimonial__item__text">
+                                    "Visited Shaif's Cuisine with friends last Sunday. Really
+                                    lovely meal and very warm welcome - we would
+                                    recommend this lovely restaurant and will try to go back again"
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial__item">
+                            <div class="testimonial__item__image">
+                                <img src="./images/testimonial_img1.png" alt="sayed ahmed">
+                            </div>
+                            <div class="testimonial__item__info">
+                                <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                                <div class="testimonial__item__stars">
+                                    <img src="./images/3star.png" alt="stars">
+                                </div>
+                                <p class="testimonial__item__text">
+                                    "Visited Shaif's Cuisine with friends last Sunday. Really
+                                    lovely meal and very warm welcome - we would
+                                    recommend this lovely restaurant and will try to go back again"
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial__item">
+                            <div class="testimonial__item__image">
+                                <img src="./images/testimonial_img1.png" alt="sayed ahmed">
+                            </div>
+                            <div class="testimonial__item__info">
+                                <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                                <div class="testimonial__item__stars">
+                                    <img src="./images/3star.png" alt="stars">
+                                </div>
+                                <p class="testimonial__item__text">
+                                    "Visited Shaif's Cuisine with friends last Sunday. Really
+                                    lovely meal and very warm welcome - we would
+                                    recommend this lovely restaurant and will try to go back again"
+                                </p>
+                            </div>
+                        </div>
+                        <div class="testimonial__item">
+                            <div class="testimonial__item__image">
+                                <img src="./images/testimonial_img1.png" alt="sayed ahmed">
+                            </div>
+                            <div class="testimonial__item__info">
+                                <h3 class="testimonial__item__name">Sayed Ahmed</h3>
+                                <div class="testimonial__item__stars">
+                                    <img src="./images/3star.png" alt="stars">
+                                </div>
+                                <p class="testimonial__item__text">
+                                    "Visited Shaif's Cuisine with friends last Sunday. Really
+                                    lovely meal and very warm welcome - we would
+                                    recommend this lovely restaurant and will try to go back again"
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </h2>
+            </div>
+        </div>
+    </section>
+    <!-- End Testimonial section-->
 </body>
 </html>
 
