--- a/pages/index.html
+++ b/pages/index.html
@@ -388,6 +388,28 @@
         </div>
     </section>
     <!-- End Testimonial section-->
+    <!-- Newsletter section-->
+    <section id="newsletter" data-aos="fade-up">
+        <div class="container">
+            <div class="newsletter__wrapper">
+                <div class="newsletter__info">
+                    <h3 class="newsletter_title">Join Newsletter</h3>
+                    <p class="newsletter__text">Get notified with the lastest news and
+                    recent offers from the "Shaif's Cuisine"
+                    </p>
+                </div>
+                <div class="newsletter__form">
+                    <form>
+                        <label for="email">
+                            <input type="email" placeholder="Your Email Address">
+                        </label>
+                        <button type="submit">Join</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End newsletter section-->
 </body>
 </html>
 
