Them Menu page - NV Thuan

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/webcuoiki/styles/globalStyles.css">
     <link rel="stylesheet" href="/webcuoiki/styles/components.css">
     <link rel="stylesheet" href="/webcuoiki/styles/home.css">
-    
+    <link rel="stylesheet" href="/webcuoiki/styles/menu.css">
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
@@ -91,7 +91,57 @@
 
     <!-- End Nav Section -->
   
-
+    <!-- page tittle -->
+    <section id="page__tittle">
+        <div class="container">
+            <h2 class="page__tittle__text">
+                Explore Our Menu
+            </h2>
+        </div>
+    </section>
+    <!-- End page tittle -->
+    <!-- Our specicals section-->
+    <section id="ourSpecicals">
+        <div class="container">
+            <h3 class="ourSpecicals__tittle">Our Specticals</h3>
+            <div class="ourSpecicals__wrapper">
+                <div class="ourSpecicals__item">
+                    <div class="ourSpecicals__item__img">
+                        <img src="./images/food-3.png" alt="food">
+                    </div>
+                    <div class="ourSpecicals__item__info">
+                        <h3 class="ourSpecicals__item__tittle">
+                            Sweet Potato Fries Bowl
+                        </h3>
+                        <h4 class="ourSpecicals__item__price">
+                            $12
+                        </h4>
+                        <div class="ourSpecicals__item__stars">
+                            <img src="./images/3star.png" alt="stars">
+                        </div>
+                    </div>
+                </div>
+                <div class="ourSpecicals__item">
+                    <div class="ourSpecicals__item__img">
+                        <img src="./images/food-3.png" alt="food">
+                    </div>
+                    <div class="ourSpecicals__item__info">
+                        <h3 class="ourSpecicals__item__tittle">
+                            Sweet Potato Fries Bowl
+                        </h3>
+                        <h4 class="ourSpecicals__item__price">
+                            $12
+                        </h4>
+                        <div class="ourSpecicals__item__stars">
+                            <img src="./images/3star.png" alt="stars">
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!-- End Our specicals section-->
     <!-- Footer -->
     <footer>
 
