--- a/pages/booking.html
+++ b/pages/booking.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="../styles/globalStyle.css" />
     <link rel="stylesheet" href="../styles/components.css" />
     <link rel="stylesheet" href="../styles/home.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
@@ -83,8 +86,10 @@
         </div>
       </div>
     </div>
-
     <!-- End Nav Section -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+      <i class="fa fa-arrow-up"></i>
+    </button>
     <!-- Booking Section -->
     <section id="form" data-aos="fade-up">
       <div class="container">
