--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="../styles/globalStyle.css" />
     <link rel="stylesheet" href="../styles/components.css" />
     <link rel="stylesheet" href="../styles/home.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- aos -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
@@ -83,9 +86,47 @@
         </div>
       </div>
     </div>
-
     <!-- End Nav Section -->
-    <section id="storeIn4" data-aos="fade-down">
+    <!--Banner success Section-->
+    <div class="banners-container">
+      <div class="banners">
+        <div class="banner error">
+          <div class="banner-icon">
+            <i
+              data-eva="alert-circle-outline"
+              data-eva-fill="#ffffff"
+              data-eva-height="48"
+              data-eva-width="48"
+            ></i>
+          </div>
+          <div class="banner-message">Some field are empty</div>
+          <div class="banner-close" onclick="hideBanners()">
+            <i data-eva="close-outline" data-eva-fill="#ffffff"></i>
+          </div>
+        </div>
+        <div class="banner success">
+          <div class="banner-icon">
+            <i
+              data-eva="checkmark-circle-outline"
+              data-eva-fill="#ffffff"
+              data-eva-height="48"
+              data-eva-width="48"
+            ></i>
+          </div>
+          <div class="banner-message">
+            Success! You'll receive our response email soon!
+          </div>
+          <div class="banner-close" onclick="hideBanners()">
+            <i data-eva="close-outline" data-eva-fill="#ffffff"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://unpkg.com/eva-icons" onload="eva.replace()"></script>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+      <i class="fa fa-arrow-up"></i>
+    </button>
+    <section id="storeIn4">
       <div class="container">
         <div class="storeIn4__wrapper">
           <div class="storeIn4__item">
@@ -114,38 +155,48 @@
     </section>
     <!-- End Store In4 Section -->
     <!--Contact Form Section-->
-    <section id="form" data-aos="fade-right">
+    <section id="form">
       <div class="container">
         <h3 class="form__title">Contact & Inquiry</h3>
         <div class="form__wrapper">
-          <form action="">
+          <form name="contactform">
             <div class="form__group">
               <label for="firstName">First Name</label>
-              <input type="text" id="firstName" name="first_name" required />
+              <input
+                type="text"
+                class="form"
+                id="firstName"
+                name="1"
+                required
+              />
             </div>
             <div class="form__group">
               <label for="lastName">Last Name</label>
-              <input type="text" id="lastName" name="last_name" required />
+              <input type="text" class="form" id="lastName" name="1" required />
             </div>
             <div class="form__group">
               <label for="email">Email</label>
-              <input type="email" id="email" name="email" required />
+              <input type="email" class="form" id="email" name="1" required />
             </div>
             <div class="form__group">
               <label for="Subject">Subject</label>
-              <input type="text" id="subject" name="subject" required />
+              <input type="text" class="form" id="subject" name="1" required />
             </div>
             <div class="form__group form__group__full">
               <label for="message">Message</label>
               <textarea
+                name="1"
                 id="message"
+                class="form"
                 name="message"
                 cols="30"
                 rows="10"
                 required
               ></textarea>
             </div>
-            <button type="submit" class="btn primary-btn">Send</button>
+            <button type="submit" class="btn primary-btn" onclick="send()">
+              Send
+            </button>
           </form>
         </div>
       </div>
