--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
     <div class="nav">
       <div class="container">
         <div class="nav__wrapper">
-          <a href="../pages/index.html" class="logo">
+          <a href="./index.html" class="logo">
             <img src="../img/logo.png" alt="#" />
           </a>
           <nav>
@@ -62,7 +62,7 @@
               </div>
               <div class="nav__list__wrapper">
                 <li>
-                  <a href="../pages/index.html" class="nav__link"> Home </a>
+                  <a href="./index.html" class="nav__link"> Home </a>
                 </li>
                 <li>
                   <a href="../pages/menu.html" class="nav__link"> Menu </a>
@@ -283,7 +283,7 @@
             <h3 class="footer__text__title">Links</h3>
             <ol class="footer__text">
               <li>
-                <a href="../pages/index.html">Home</a>
+                <a href="../index.html">Home</a>
               </li>
               <li>
                 <a href="../pages/menu.html">Menu</a>
