--- a/pages/booking.html
+++ b/pages/booking.html
@@ -21,7 +21,7 @@
     <div class="nav">
       <div class="container">
         <div class="nav__wrapper">
-          <a href="./index.html" class="logo">
+          <a href="../index.html" class="logo">
             <img src="../img/logo.png" alt="#" />
           </a>
           <nav>
@@ -142,7 +142,7 @@
               <input type="date" id="date" name="Date" required />
             </div>
             <div class="form__group">
-              <label for="time">time</label>
+              <label for="time">Time</label>
               <input type="time" id="time" name="Time" required />
             </div>
             <div class="form__group form__group__full">
@@ -164,7 +164,7 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Bangladeshi food to delight the
+              Fresh and delicious traditional Ha Dong food to delight the
               whole family.
             </p>
             <div class="footer__socials">
@@ -273,13 +273,13 @@
             <h3 class="footer__text__title">Contact</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:+880123">+880123</a>
+                <a href="tel:+880123">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">webcifar@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
               </li>
               <li>
-                <a href="#">GEC Circle, Chittagong, Bangladeshi</a>
+                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
               </li>
             </ol>
           </div>
@@ -289,7 +289,7 @@
     <div id="copyright">
       <div class="container">
         <p class="copyright__text">
-          Copyright 2021 Shaif's Cuisine | All rights reserved
+           Copyright <i class="fa fa-copyright"></i> 2022 Nhóm 7 | All rights reserved
         </p>
       </div>
     </div>
@@ -302,3 +302,4 @@
     <script src="../scripts/main.js"></script>
   </body>
 </html>
+
