--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,7 @@
     <div class="nav">
       <div class="container">
         <div class="nav__wrapper">
-          <a href="./index.html" class="logo">
+          <a href="../index.html" class="logo">
             <img src="../img/logo.png" alt="#" />
           </a>
           <nav>
@@ -100,15 +100,15 @@
           </div>
           <div class="ourStory__info">
             <h3 class="ourStory__title">Out Story</h3>
-            <p class="ourStory__subtitle">It's all started since 1998</p>
+            <p class="ourStory__subtitle">It's all started since 2022</p>
             <p class="ourStory__text">
-              Welcome to Shaif's Cuisine. We take pride in delivering warm,
-              friendly service and creating mouth-watering culinary delights for
-              all. Using only the freshest locally sourced ingredients, we’ll
-              ensure you have a dining experience to remember.
+              Welcome to K-Food. We take pride in delivering warm, friendly
+              service and creating mouth-watering culinary delights for all.
+              Using only the freshest locally sourced ingredients, we’ll ensure
+              you have a dining experience to remember.
               <br /><br />
 
-              Since 1998, we are the perfect place for a romantic meal for two,
+              Since 2022, we are the perfect place for a romantic meal for two,
               a catch-up with friends, family parties, business meetings, and
               bringing loved ones together. With comfortable surroundings,
               affordable prices, and seating for up to 65 guests, we can cater
@@ -131,8 +131,8 @@
             showcasing warmth, graciousness, efficiency, skill, professionalism,
             and integrity in our work, we will continually serve our consumers
             with exceptional service. To have every customer who comes through
-            our doors leave impressed by their experience at Shaif's Cuisine and
-            excited to come back again.
+            our doors leave impressed by their experience at K-Food and excited
+            to come back again.
           </p>
         </div>
         <div class="ourGoals__imgs__wrapper">
@@ -158,8 +158,8 @@
               <img src="../img/logo.png" alt="#" />
             </div>
             <p class="footer__desc">
-              Fresh and delicious traditional Bangladeshi food to delight the
-              whole family.
+              Fresh and delicious traditional Ha Dong food to delight the whole
+              family.
             </p>
             <div class="footer__socials">
               <h4 class="footer_socials__title">Follow us</h4>
@@ -267,13 +267,13 @@
             <h3 class="footer__text__title">Contact</h3>
             <ol class="footer__text">
               <li>
-                <a href="tel:0981 458 371">0981 458 371</a>
+                <a href="tel:+880123">0981 458 371</a>
               </li>
               <li>
-                <a href="mailto:webcifar@gmail.com">webcifar@gmail.com</a>
+                <a href="mailto:webcifar@gmail.com">kfood@gmail.com</a>
               </li>
               <li>
-                <a href="#">GEC Circle, Chittagong, Bangladeshi</a>
+                <a href="#">Ngo 181, Ha Dong, Ha Noi</a>
               </li>
             </ol>
           </div>
@@ -283,10 +283,12 @@
     <div id="copyright">
       <div class="container">
         <p class="copyright__text">
-          Copyright 2021 Shaif's Cuisine | All rights reserved
+          Copyright <i class="fa fa-copyright"></i> 2022 Nhóm 7 | All rights
+          reserved
         </p>
       </div>
     </div>
+
     <!-- EndFooter -->
     <!-- Return to Top Button -->
     <!-- aos -->
