--- a/pages/contact.html
+++ b/pages/contact.html
@@ -334,7 +334,7 @@
     </footer>
     <div id="copyright">
       <div class="container">
-        <p class="copyright__text">Copyright 2021 Shaif's Cuisine |</p>
+        <p class="copyright__text">Copyright 2021 K-Food</p>
       </div>
     </div>
     <!-- EndFooter -->
