--- a/pages/contact.html
+++ b/pages/contact.html
@@ -334,7 +334,9 @@
     </footer>
     <div id="copyright">
       <div class="container">
-        <p class="copyright__text">Copyright 2021 K-Food</p>
+        <p class="copyright__text">
+          Copyright 2021 Nhóm 7 | All right reserved
+        </p>
       </div>
     </div>
     <!-- EndFooter -->
