--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
     <div class="nav">
       <div class="container">
         <div class="nav__wrapper">
-          <a href="./index.html" class="logo">
+          <a href="../index.html" class="logo">
             <img src="../img/logo.png" alt="#" />
           </a>
           <nav>
