--- a/pages/booking.html
+++ b/pages/booking.html
@@ -188,7 +188,9 @@
               <label for="note">Ghi chú</label>
               <textarea name="Note" id="note" rows="4"></textarea>
             </div>
-            <button type="submit" class="btn primary-btn">Đặt Bàn</button>
+            <button type="submit" class="btn primary-btn" onclick="send()">
+              Đặt Bàn
+            </button>
           </form>
         </div>
       </div>
